--- a/pom.xml
+++ b/pom.xml
@@ -19,7 +19,7 @@
   <parent>
     <groupId>org.sonatype.nexus.plugins</groupId>
     <artifactId>nexus-plugins</artifactId>
-    <version>3.19.0-SNAPSHOT</version>
+    <version>3.18.1-01</version>
   </parent>
 
   <artifactId>microsoft-symbol-server-parent</artifactId>
