Small changes that make the world go round

--- a/nexus-repository-microsoft-symbol-server/pom.xml
+++ b/nexus-repository-microsoft-symbol-server/pom.xml
@@ -51,13 +51,18 @@
         <groupId>org.sonatype.nexus.buildsupport</groupId>
         <artifactId>extjs-maven-plugin</artifactId>
         <configuration>
-          <namespace>NX.microsoft-symbol-server</namespace>
+          <namespace>NX.microsoftsymbolserver</namespace>
         </configuration>
       </plugin>
 
       <plugin>
         <groupId>org.apache.karaf.tooling</groupId>
         <artifactId>karaf-maven-plugin</artifactId>
+      </plugin>
+
+      <plugin>
+        <groupId>org.sonatype.plugins</groupId>
+        <artifactId>yuicompressor-maven-plugin</artifactId>
       </plugin>
 
       <plugin>
