--- a/nexus-repository-microsoft-symbol-server/pom.xml
+++ b/nexus-repository-microsoft-symbol-server/pom.xml
@@ -5,7 +5,7 @@
   <parent>
     <groupId>org.sonatype.nexus.plugins</groupId>
     <artifactId>microsoft-symbol-server-parent</artifactId>
-    <version>0.0.5</version>
+    <version>0.0.6-SNAPSHOT</version>
   </parent>
 
   <artifactId>nexus-repository-microsoft-symbol-server</artifactId>
@@ -28,6 +28,7 @@
     <dependency>
       <groupId>org.apache.commons</groupId>
       <artifactId>commons-compress</artifactId>
+      <scope>provided</scope>
     </dependency>
 
     <dependency>
