--- a/nexus-repository-microsoft-symbol-server/pom.xml
+++ b/nexus-repository-microsoft-symbol-server/pom.xml
@@ -5,7 +5,7 @@
   <parent>
     <groupId>org.sonatype.nexus.plugins</groupId>
     <artifactId>microsoft-symbol-server-parent</artifactId>
-    <version>0.0.7-SNAPSHOT</version>
+    <version>0.0.7</version>
   </parent>
 
   <artifactId>nexus-repository-microsoft-symbol-server</artifactId>
