--- a/pom.xml
+++ b/pom.xml
@@ -19,11 +19,11 @@
   <parent>
     <groupId>org.sonatype.nexus.plugins</groupId>
     <artifactId>nexus-plugins</artifactId>
-    <version>3.29.2-02</version>
+    <version>3.58.0-01</version>
   </parent>
 
   <artifactId>microsoft-symbol-server-parent</artifactId>
-  <version>0.0.13-SNAPSHOT</version>
+  <version>0.0.12</version>
   <packaging>pom</packaging>
 
   <inceptionYear>2019</inceptionYear>
@@ -35,7 +35,7 @@
 
   <scm>
     <developerConnection>scm:git:git@github.com:sonatype-nexus-community/nexus-repository-microsoft-symbol-server.git</developerConnection>
-    <tag>HEAD</tag>
+    <tag>microsoft-symbol-server-parent-0.0.12</tag>
   </scm>
   <distributionManagement>
     <snapshotRepository>
@@ -45,22 +45,14 @@
   </distributionManagement>
 
   <properties>
-    <nxrm-version>3.29.2-02</nxrm-version>
+    <nxrm-version>3.58.0-01</nxrm-version>
   </properties>
-
-  <repositories>
-    <!-- ensure we can find the parent pom when starting from an empty local .m2 repository -->
-    <repository>
-      <id>rso-snapshots</id>
-      <url>https://repository.sonatype.org/content/repositories/snapshots</url>
-    </repository>
-  </repositories>
 
   <build>
     <plugins>
       <plugin>
         <artifactId>maven-enforcer-plugin</artifactId>
-        <version>1.4.1</version>
+        <version>3.3.0</version>
         <executions>
           <execution>
             <id>enforce-java</id>
